--- a/style.css
+++ b/style.css
@@ -1,31 +1,34 @@
 h1{
-	color:DarkSlateGray;
+	color:white;
 	text-align: center;
 	font-size: 50px;
 	font-family: 'Oswald', sans-serif;
+	background-color: #C63D0F;
 }
 h2{
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 75%, georgia, sans-serif;
 	color: teal;
+	background-color: grey;
 }
 h3 {
 	color: cadetblue;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: georgia, sans-serif;
 }
 h4 {
 	color: DarkGray;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: georgia, sans-serif;
 }
 p {
 	color: dimgray;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: georgia, sans-serif;
+	background-color: purple;
 }
 ul {
 	list-style-type: none;
 	margin:0;
 	padding:0;
 	font-size:20px;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: georgia, sans-serif;
 	text-align: left;
 }
 li {
@@ -44,7 +47,7 @@ li a:hover {
 }
 .GIS{
 	text-align:left;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: georgia, sans-serif;
 }
 #header {
 	text-align: center;
