--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@ h1{
 }
 h2{
 	font-family: 75%, georgia, sans-serif;
-	color: teal;
-	background-color: grey;
+	color: #FDF3E7;
+	background-color: #3B3738;
 }
 h3 {
 	color: cadetblue;
 	font-family: georgia, sans-serif;
 }
 h4 {
-	color: DarkGray;
+	color: #C63D0F;
 	font-family: georgia, sans-serif;
 }
 p {
