--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ h1{
 	text-align: center;
 	font-size: 50px;
 	font-family: "Courier New", Courier, monospace;
+	background-color: black;
 }
 h2{
 	font-family: 75%, georgia, sans-serif;
@@ -13,24 +14,27 @@ h2{
 	background: DarkCyan;
 }
 h3 {
-	color: cadetblue;
-	font-family: georgia, sans-serif;
+	color: white;
+	font-family: "Courier New", Courier, monospace;
 	background: IndianRed;
 }
 h4 {
 	color: white;
-	font-family: georgia, sans-serif;
+	font-family: "Courier New", Courier, monospace;
+	/*font-family: georgia, sans-serif;*/
 }
 p {
 	color: dimgray;
-	font-family: georgia, sans-serif;
+	font-family: "Courier New", Courier, monospace;
+	/*font-family: georgia, sans-serif;*/
 }
 ul {
 	list-style-type: none;
 	margin:0;
 	padding:0;
 	font-size:20px;
-	font-family: georgia, sans-serif;
+	font-family: "Courier New", Courier, monospace;
+	/*font-family: georgia, sans-serif;*/
 	text-align: left;
 }
 li {
@@ -49,7 +53,9 @@ li a:hover {
 }
 .GIS{
 	text-align:left;
-	font-family: georgia, sans-serif;
+	/*font-family: georgia, sans-serif;*/
+	font-family: "Courier New", Courier, monospace;
+	
 }
 #header {
 	text-align: center;
